# candle_dataset_loader

./: Cargo.toml  run.txt
src/: dataset.rs  lib.rs  loader_trait.rs  test.rs  test_magika.rs
