[package]
name = "candle_dataset_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = {version = "0.8.0"}
rand = "0.8.5"

[dev-dependencies]
anyhow = "1"
candle-nn = { version = "0.8.0" }
once_cell = "1.20.2"